fix overflow issue

--- a/index.css
+++ b/index.css
@@ -26,6 +26,7 @@ body {
   font-family: 'DM Sans', 'Quicksand', 'Roboto', sans-serif;
   font-size: 16px;
   line-height: 1.5;
+  overflow-x: hidden;
   margin: 0;
   padding: 0;
 }
